fix: replace CSS variables with hardcoded colors

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -15,7 +15,7 @@
         }
 
         .admin-card {
-            background-color: var(--color-light-grey);
+            background-color: #f5f5f5;
             padding: 1rem;
             margin-bottom: 1rem;
             border-radius: 8px;
@@ -553,7 +553,7 @@
                     <!-- Header Info -->
                     <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                         <strong>Order ID:</strong><span id="view-order-id"
-                            style="color: var(--color-primary); font-weight: bold;"></span>
+                            style="color: #c1ff72; font-weight: bold;"></span>
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                         <strong>Date:</strong><span id="view-order-date"></span>
