Add SEO optimization, policy pages, and routing fixes

--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -188,7 +188,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <h1>INDRITA FABRICS</h1>
+            <h1>RASOBHOOMI</h1>
             <p>Admin Panel</p>
         </div>
 
