--- a/pages/categories.html
+++ b/pages/categories.html
@@ -76,12 +76,16 @@
             </button>
         </div>
         <div class="sidebar-menu">
-            <a href="categories.html" class="menu-item">Categories</a>
-            <a href="about.html" class="menu-item">About Us</a>
-            <a href="contact.html" class="menu-item">Contact Us</a>
-            <a href="refund.html" class="menu-item">Refund & Return</a>
-            <a href="track-order.html" class="menu-item">Track Your Order</a>
-            <a href="index.html" class="menu-item">Home</a>
+            <a href="/categories" class="menu-item">Categories</a>
+            <a href="/about" class="menu-item">About Us</a>
+            <a href="/contact" class="menu-item">Contact Us</a>
+            <a href="/terms.html" class="menu-item">Terms & Conditions</a>
+            <a href="/refund.html" class="menu-item">Refund Policy</a>
+            <a href="/return.html" class="menu-item">Return Policy</a>
+            <a href="/shipping.html" class="menu-item">Shipping Policy</a>
+            <a href="/privacy.html" class="menu-item">Privacy Policy</a>
+ <a href="/track-order" class="menu-item">Track Your Order</a>
+            <a href="/" class="menu-item">Home</a>
         </div>
         <div class="admin-link-container">
             <a href="admin.html" class="admin-link">
