--- a/pages/refund.html
+++ b/pages/refund.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Refund & Return - Mobile E-commerce</title>
+    <title>Refund Policy - Rasobhoomi</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
@@ -21,7 +21,7 @@
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
         </button>
-        <div class="nav-logo">Indrita Fabrics</div>
+        <div class="nav-logo">Rasobhoomi</div>
 
         <!-- Search Bar (Hidden by default) -->
         <div class="search-bar-container">
@@ -76,12 +76,16 @@
             </button>
         </div>
         <div class="sidebar-menu">
-            <a href="categories.html" class="menu-item">Categories</a>
-            <a href="about.html" class="menu-item">About Us</a>
-            <a href="contact.html" class="menu-item">Contact Us</a>
-            <a href="refund.html" class="menu-item">Refund & Return</a>
-            <a href="track-order.html" class="menu-item">Track Your Order</a>
-            <a href="index.html" class="menu-item">Home</a>
+            <a href="/categories" class="menu-item">Categories</a>
+            <a href="/about" class="menu-item">About Us</a>
+            <a href="/contact" class="menu-item">Contact Us</a>
+            <a href="/terms.html" class="menu-item">Terms & Conditions</a>
+            <a href="/refund.html" class="menu-item">Refund Policy</a>
+            <a href="/return.html" class="menu-item">Return Policy</a>
+            <a href="/shipping.html" class="menu-item">Shipping Policy</a>
+            <a href="/privacy.html" class="menu-item">Privacy Policy</a>
+            <a href="/track-order" class="menu-item">Track Your Order</a>
+            <a href="/" class="menu-item">Home</a>
         </div>
         <div class="admin-link-container">
             <a href="admin.html" class="admin-link">
@@ -95,69 +99,38 @@
         </div>
     </aside>
 
-    <main style="padding: 2rem 1.5rem; max-width: 800px; margin: 0 auto;">
+    <main style="padding: 2rem 1.5rem; max-width: 800px; margin: 0 auto; line-height: 1.8; color: #333;">
         <h1 class="text-red"
             style="text-align: center; margin-bottom: 2rem; font-family: 'Great Vibes', cursive; font-size: 3rem;">
-            Refund & Return Policy</h1>
+            Refund Policy</h1>
 
-        <div class="policy-content" style="font-family: 'Inter', sans-serif; line-height: 1.6; color: #2C1B10;">
-            <p style="margin-bottom: 1.5rem; font-style: italic;">At Indrita Fabrics, every product is carefully
-                handcrafted by skilled artisans. Due to the nature of handloom and handmade products, slight variations
-                in color, texture, and weave are natural and make each piece unique. These are not considered defects.
-            </p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">1. Eligibility for Returns</h3>
-            <p>We accept returns only under the following conditions:</p>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>The product received is damaged, defective, or incorrect</li>
-                <li>The issue is reported within 48 hours of delivery</li>
-                <li>The product is unused, unwashed, and returned in its original condition with tags and packaging
-                    intact</li>
-            </ul>
-            <p>To initiate a return, please contact us at <strong>[your support email/phone]</strong> with:</p>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>Order ID</li>
-                <li>Clear photos or videos showing the issue</li>
-            </ul>
+        <p style="margin-bottom: 1rem;">Rasobhoomi follows a strict no-refund policy due to the nature of live
+            plants. Once an order is placed and payment is completed, the amount paid for the plant is
+            non-refundable. This applies to all plants, including small plants, large drum plants, and potted
+            plants.</p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">2. Non-Returnable Items</h3>
-            <p>The following items are not eligible for return or refund:</p>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>Products purchased during sales, discounts, or clearance offers</li>
-                <li>Customized or made-to-order items</li>
-                <li>Products damaged due to improper use, washing, or storage</li>
-                <li>Minor variations in color or weave inherent to handloom products</li>
-            </ul>
+        <p style="margin-bottom: 1rem;">Under no circumstances will Rasobhoomi issue a monetary refund, whether in
+            cash, bank transfer, UPI, or any other digital payment method. This policy exists because plants are
+            perishable living items that require careful handling and cannot be resold once dispatched or delivered.
+        </p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">3. Refund Policy</h3>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>Once the returned item is received and inspected, we will notify you of the approval or rejection of
-                    your refund</li>
-                <li>Approved refunds will be processed within 7–10 business days</li>
-                <li>Refunds will be issued to the original payment method only</li>
-                <li>Shipping charges are non-refundable, unless the return is due to our error</li>
-            </ul>
+        <p style="margin-bottom: 1rem;">In cases where a plant is damaged or dies within 15 days of delivery,
+            Rasobhoomi does not provide a refund. Instead, the customer is eligible to receive a replacement plant.
+            The replacement will be of the same type as originally ordered, subject to availability. If the same
+            plant is not available, the customer may choose another plant of similar value.</p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">4. Exchange Policy</h3>
-            <p style="margin-bottom: 1rem;">We offer exchanges only for damaged or incorrect products, subject to stock
-                availability. If the requested replacement is unavailable, a refund will be issued instead.</p>
+        <p style="margin-bottom: 1rem;">While Rasobhoomi bears the responsibility of providing the replacement
+            plant, the shipping or courier charges for the replacement must be paid by the customer. No refund will
+            be issued for shipping charges already paid.</p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">5. Return Shipping</h3>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>If the return is approved due to a defect or error on our part, we will arrange the return shipping
-                </li>
-                <li>In other approved cases, return shipping costs must be borne by the customer</li>
-            </ul>
+        <p style="margin-bottom: 1rem;">Refunds are also not applicable if the customer changes their mind after
+            placing an order, selects the wrong plant, or is dissatisfied due to personal preference. Customers are
+            encouraged to carefully review plant details and use the video call selection option (for large plants)
+            before finalizing their purchase.</p>
 
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">6. Cancellations</h3>
-            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
-                <li>Orders can be canceled within 12 hours of placing the order</li>
-                <li>Once an order is processed or shipped, it cannot be canceled</li>
-            </ul>
-
-            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">7. Important Note</h3>
-            <p style="margin-bottom: 2rem;">Handloom products are delicate and artisanal in nature. We encourage
-                customers to read product descriptions carefully and review images before purchasing.</p>
+        <p style="margin-bottom: 1rem;">By making a purchase from Rasobhoomi, the customer acknowledges and agrees
+            to this refund policy and understands that plant prices are never refundable.</p>
         </div>
     </main>
 
@@ -165,10 +138,12 @@
     <!-- Footer -->
     <footer>
         <div class="footer-links">
-            <a href="#" class="footer-link">terms & condition</a>
-            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products"
-                target="_blank" class="footer-link">contact no.</a>
-            <a href="#" class="footer-link">location by maps</a>
+            <a href="terms.html" class="footer-link">Terms & Conditions</a>
+            <a href="refund.html" class="footer-link">Refund Policy</a>
+            <a href="return.html" class="footer-link">Return Policy</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Rasobhoomi,%20I%20have%20a%20query%20regarding%20products"
+                target="_blank" class="footer-link">Contact Us</a>
+            <a href="#" class="footer-link">Location by Maps</a>
         </div>
         <div class="social-icons">
             <a href="#" class="social-icon">
@@ -196,7 +171,7 @@
             </a>
         </div>
         <div class="copyright">
-            Indrita Fabrics. All rights reserved.
+            Rasobhoomi. All rights reserved.
         </div>
     </footer>
 
