--- a/pages/admin.html
+++ b/pages/admin.html
@@ -191,18 +191,18 @@
 
         /* Admin Navbar Overrides */
         .admin-navbar {
-            background-color: #2C1B10 !important;
-            /* Dark Brown */
-            color: #FFFAF0 !important;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            background-color: #c1ff72 !important;
+            /* Primary Green */
+            color: #2C1B10 !important;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .admin-navbar .nav-icon {
-            color: #FFFAF0 !important;
+            color: #2C1B10 !important;
         }
 
         .admin-navbar .nav-logo {
-            color: #FFFAF0 !important;
+            color: #2C1B10 !important;
         }
 
         .admin-logo {
@@ -219,8 +219,8 @@
 
         .logout-btn {
             background: transparent;
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            color: #FFFAF0;
+            border: 1px solid rgba(44, 27, 16, 0.5);
+            color: #2C1B10;
             padding: 0.25rem 0.75rem;
             border-radius: 4px;
             font-size: 0.7rem;
@@ -231,8 +231,8 @@
         }
 
         .logout-btn:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: #FFFAF0;
+            background: rgba(44, 27, 16, 0.1);
+            border-color: #2C1B10;
         }
 
         /* Filter Dropdown Styles */
@@ -365,14 +365,14 @@
             align-items: center;
             padding: 1rem;
             border-bottom: 1px solid #ddd;
-            background: #2C1B10;
-            color: #FFFAF0;
+            background: #c1ff72;
+            color: #2C1B10;
         }
 
         .sidebar-close {
             background: none;
             border: none;
-            color: #FFFAF0;
+            color: #2C1B10;
             font-size: 1.5rem;
             cursor: pointer;
         }
