--- a/pages/terms.html
+++ b/pages/terms.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Track Order - Mobile E-commerce</title>
+    <title>Terms & Conditions - Rasobhoomi</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
@@ -21,7 +21,7 @@
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
         </button>
-        <div class="nav-logo">Indrita Fabrics</div>
+        <div class="nav-logo">Rasobhoomi</div>
 
         <!-- Search Bar (Hidden by default) -->
         <div class="search-bar-container">
@@ -99,129 +99,58 @@
         </div>
     </aside>
 
-    <main style="padding: 0; padding-bottom: 2rem;">
-        <!-- Hero Search Section -->
-        <div class="tracking-hero">
-            <h1 class="tracking-title">TRACK YOUR ODER</h1>
-            <p class="tracking-subtitle">Enter your Order ID to see the current status</p>
+    <main style="padding: 2rem 1.5rem; max-width: 800px; margin: 0 auto; line-height: 1.8; color: #333;">
+        <h1 class="text-red"
+            style="text-align: center; margin-bottom: 2rem; font-family: 'Great Vibes', cursive; font-size: 3rem;">
+            Terms & Conditions</h1>
 
-            <div class="search-container">
-                <input type="text" id="track-id" class="tracking-input" placeholder="ORD-XXXXXX">
-                <button id="track-btn" class="tracking-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                    </svg>
-                    TRACK
-                </button>
-            </div>
-        </div>
+        <p style="margin-bottom: 1rem;">Welcome to Rasobhoomi. By purchasing plants or related products from
+            Rasobhoomi, you agree to the following Terms & Conditions. These terms are designed to ensure
+            transparency, clarity, and a smooth experience for both the customer and the nursery.</p>
 
-        <!-- Result Container -->
-        <div id="tracking-result" class="tracking-result-container" style="display: none;">
+        <p style="margin-bottom: 1rem;">Rasobhoomi deals in live plants, which are natural products and subject to
+            environmental, handling, and transit conditions. Once a plant is delivered to the customer, it is
+            expected that the customer will take reasonable care of the plant, including proper watering, placement,
+            and basic maintenance. Due to the nature of live plants, Rasobhoomi does not accept potting-related
+            complaints within the first 15 days after delivery.</p>
 
-            <!-- Order Details Card -->
-            <div class="order-summary-card">
-                <div class="order-header-row">
-                    <span style="font-weight: bold; font-size: 1.1rem;">ORDER <span
-                            id="display-order-id">#123</span></span>
-                    <span class="status-pill" id="display-status">IN TRANSIT</span>
-                </div>
-                <div class="order-info-row">
-                    <span id="display-date" style="color:#666; font-size: 0.85rem;">Oct 24, 2024</span>
-                    <span id="display-total" style="font-weight: bold;">₹2500</span>
-                </div>
-                <!-- Items Preview could go here -->
-            </div>
+        <p style="margin-bottom: 1rem;">If a plant is damaged or dies within 15 days from the date of delivery,
+            Rasobhoomi will provide a complete replacement by sending a new plant of the same type. However, in such
+            replacement cases, the courier or delivery charges must be paid by the customer. Replacement is limited
+            only to sending a new plant and does not include any monetary compensation.</p>
 
-            <!-- Timeline -->
-            <div class="timeline-wrapper">
-                <!-- Step 1 -->
-                <div class="timeline-step active" id="step-1">
-                    <div class="timeline-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                            <polyline points="14 2 14 8 20 8"></polyline>
-                            <line x1="16" y1="13" x2="8" y2="13"></line>
-                            <line x1="16" y1="17" x2="8" y2="17"></line>
-                            <polyline points="10 9 9 9 8 9"></polyline>
-                        </svg>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Order Placed</h3>
-                        <p>We have received your order.</p>
-                    </div>
-                </div>
+        <p style="margin-bottom: 1rem;">The price paid for any plant is non-refundable under all circumstances. Cash
+            refunds, bank refunds, or digital refunds are not permitted. If a customer is not satisfied with a plant
+            for reasons covered under replacement eligibility, they may choose to receive another plant instead of
+            the original one, subject to availability.</p>
 
-                <!-- Connector -->
-                <div class="timeline-line" id="line-1"></div>
+        <p style="margin-bottom: 1rem;">Plants purchased from Rasobhoomi cannot be returned to the nursery. The only
+            exception to this rule is when a wrong plant is delivered to the customer. In such a case, only the
+            incorrectly delivered plant will be eligible for return.</p>
 
-                <!-- Step 2 -->
-                <div class="timeline-step" id="step-2">
-                    <div class="timeline-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <polyline points="20 6 9 17 4 12"></polyline>
-                        </svg>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Processing</h3>
-                        <p>We are preparing your order.</p>
-                    </div>
-                </div>
+        <p style="margin-bottom: 1rem;">Shipping charges are not fixed and depend on the delivery method chosen by
+            the customer. Rasobhoomi offers multiple delivery options including courier service, railway service,
+            bus service, and hand delivery. The customer is responsible for selecting their preferred delivery
+            method and bearing the associated costs.</p>
 
-                <!-- Connector -->
-                <div class="timeline-line" id="line-2"></div>
+        <p style="margin-bottom: 1rem;">For large drum plants or potted plants, customers are given the option to
+            select plants through video call without visiting the nursery in person. This service is provided to
+            assist customers in plant selection and does not alter any other policy terms.</p>
 
-                <!-- Step 3 -->
-                <div class="timeline-step" id="step-3">
-                    <div class="timeline-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <rect x="1" y="3" width="15" height="13"></rect>
-                            <polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon>
-                            <circle cx="5.5" cy="18.5" r="2.5"></circle>
-                            <circle cx="18.5" cy="18.5" r="2.5"></circle>
-                        </svg>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Shipped</h3>
-                        <p>Your order is on the way.</p>
-                    </div>
-                </div>
-
-                <!-- Connector -->
-                <div class="timeline-line" id="line-3"></div>
-
-                <!-- Step 4 -->
-                <div class="timeline-step" id="step-4">
-                    <div class="timeline-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                            <circle cx="12" cy="10" r="3"></circle>
-                        </svg>
-                    </div>
-                    <div class="timeline-content">
-                        <h3>Delivered</h3>
-                        <p>Order has been delivered.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+        <p style="margin-bottom: 1rem;">By placing an order with Rasobhoomi, the customer confirms that they have
+            read, understood, and agreed to these Terms & Conditions in full.</p>
     </main>
 
 
     <!-- Footer -->
     <footer>
         <div class="footer-links">
-            <a href="#" class="footer-link">terms & condition</a>
-            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products"
-                target="_blank" class="footer-link">contact no.</a>
-            <a href="#" class="footer-link">location by maps</a>
+            <a href="terms.html" class="footer-link">Terms & Conditions</a>
+            <a href="refund.html" class="footer-link">Refund Policy</a>
+            <a href="return.html" class="footer-link">Return Policy</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Rasobhoomi,%20I%20have%20a%20query%20regarding%20products"
+                target="_blank" class="footer-link">Contact Us</a>
+            <a href="#" class="footer-link">Location by Maps</a>
         </div>
         <div class="social-icons">
             <a href="#" class="social-icon">
@@ -249,7 +178,7 @@
             </a>
         </div>
         <div class="copyright">
-            Indrita Fabrics. All rights reserved.
+            Rasobhoomi. All rights reserved.
         </div>
     </footer>
 
