Add ₹150 delivery charge, update policies (7-day window), and add contact information

--- a/pages/refund.html
+++ b/pages/refund.html
@@ -131,6 +131,12 @@
 
         <p style="margin-bottom: 1rem;">By making a purchase from Rasobhoomi, the customer acknowledges and agrees
             to this refund policy and understands that plant prices are never refundable.</p>
+
+        <p style="margin-bottom: 1rem; font-weight: bold; border-top: 1px solid #eee; padding-top: 1rem;">ALL THE
+            APPROVED
+            EXCHANGE AND
+            REPLACEMENT WILL BE COMPLETED WITHIN 7 BUSINESS DAYS, REFUNDS WILL BE CREDITED BACK TO THE ORIGINAL PAYMENT
+            METHOD IN 7 BUSINESS DAYS.</p>
         </div>
     </main>
 
