--- a/pages/return.html
+++ b/pages/return.html
@@ -105,27 +105,23 @@
             Return Policy</h1>
 
 
-        <p style="margin-bottom: 1rem;">Rasobhoomi maintains a no-return policy for plants once they have been
-            delivered to the customer. Since plants are living organisms and highly sensitive to handling and
-            environmental changes, returned plants cannot be accepted back into the nursery.</p>
+        <p style="margin-bottom: 1rem; font-weight: bold; font-size: 1.2rem; color: #2d5a27;">WE HAVE 7 DAYS RETURN
+            POLICY</p>
+
+        <p style="margin-bottom: 1rem;">Rasobhoomi maintains a 7-day return policy for specific cases. While plants are
+            living organisms, we understand that issues may arise. If you have any concerns about your delivery, please
+            report it within 7 days of receiving the order.</p>
 
         <p style="margin-bottom: 1rem;">Customers are requested to inspect their order at the time of delivery. If
-            the delivered plant matches the order placed, no return will be accepted under any condition. This
-            includes cases where the customer no longer wants the plant or feels dissatisfied after delivery.</p>
+            the delivered plant matches the order placed and is in healthy condition, no return will be accepted. This
+            includes cases where the customer no longer wants the plant or changes their mind after 7 days.</p>
 
-        <p style="margin-bottom: 1rem;">The only exception to this policy is when a wrong plant is delivered. If the
-            customer receives a plant that is different from what was ordered, Rasobhoomi will accept the return of
-            the incorrect plant. In such cases, the return applies strictly to the wrong plant only.</p>
+        <p style="margin-bottom: 1rem;">The only major exception to this policy is when a wrong plant is delivered or if
+            the plant is severely damaged during transit. In such cases, Rasobhoomi will accept the return and process a
+            replacement within our 7-day window.</p>
 
-        <p style="margin-bottom: 1rem;">No returns are allowed for reasons such as plant size variation, natural
-            growth differences, color variation, or customer handling issues. Minor variations are natural and
-            expected in live plants.</p>
-
-        <p style="margin-bottom: 1rem;">Returned plants must be reported promptly after delivery. Rasobhoomi
-            reserves the right to verify the claim before approving any return.</p>
-
-        <p style="margin-bottom: 1rem;">By placing an order, the customer agrees that plant returns are generally
-            not possible and are allowed only in cases of wrong delivery.</p>
+        <p style="margin-bottom: 1rem;">By placing an order, the customer agrees to this 7-day return policy and
+            acknowledges that returns are allowed only for valid reasons reported within the specified timeframe.</p>
         </div>
     </main>
 
