--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -108,10 +108,10 @@
             Rasobhoomi</div>
 
         <section style="margin-bottom: 2rem;">
-            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">1. Flexible Shipping
-                Options</h3>
-            <p>Rasobhoomi offers flexible shipping options to suit customer preferences. Shipping charges are not fixed
-                and vary depending on the delivery method selected and the destination.</p>
+            <h3 style="color: #2d5a27; border-bottom: 1px solid #c1ff72; padding-bottom: 0.5rem;">1. Shipping Charges
+            </h3>
+            <p>Rasobhoomi charges a flat delivery fee of <strong>₹150</strong> on all orders. This fee is added to the
+                total amount during checkout.</p>
         </section>
 
         <section style="margin-bottom: 2rem;">
