--- a/pages/terms.html
+++ b/pages/terms.html
@@ -128,10 +128,9 @@
             exception to this rule is when a wrong plant is delivered to the customer. In such a case, only the
             incorrectly delivered plant will be eligible for return.</p>
 
-        <p style="margin-bottom: 1rem;">Shipping charges are not fixed and depend on the delivery method chosen by
-            the customer. Rasobhoomi offers multiple delivery options including courier service, railway service,
-            bus service, and hand delivery. The customer is responsible for selecting their preferred delivery
-            method and bearing the associated costs.</p>
+        <p style="margin-bottom: 1rem;">Shipping charges are ₹150 for all orders. Rasobhoomi offers multiple delivery
+            options including courier service, railway service, bus service, and hand delivery. The customer is
+            responsible for selecting their preferred delivery method during checkout.</p>
 
         <p style="margin-bottom: 1rem;">For large drum plants or potted plants, customers are given the option to
             select plants through video call without visiting the nursery in person. This service is provided to
@@ -139,6 +138,13 @@
 
         <p style="margin-bottom: 1rem;">By placing an order with Rasobhoomi, the customer confirms that they have
             read, understood, and agreed to these Terms & Conditions in full.</p>
+
+        <section style="margin-top: 2rem; border-top: 1px solid #eee; padding-top: 1rem;">
+            <h3>Contact Us</h3>
+            <p><strong>Email:</strong> rasobhoomiplantation@gmail.com</p>
+            <p><strong>Phone:</strong> +91 8972076182</p>
+            <p><strong>Address:</strong> Baikara, NORTH 24 PARAGANAS, WEST BENGAL - 743245</p>
+        </section>
     </main>
 
 
